refactor: make top banner have a parallax

--- a/src/bop-components/components/BTopBanner/BTopBanner.styl
+++ b/src/bop-components/components/BTopBanner/BTopBanner.styl
@@ -1,8 +1,5 @@
-#b-top-banner
-  height: 150px
+#b-top-banner .v-parallax__content
   display: flex
   flex-direction: column
   justify-content: center
   align-items: center
-  &.b-top-banner__tall
-    height: 300px
