style: update style rules
Updated style rules for a better design

--- a/src/css/elements.styl
+++ b/src/css/elements.styl
@@ -2,13 +2,22 @@
 .container.px-0 .caption
   padding-left: 12px
 
-h1
-h2
-h3
-h4
-h5
-h6
+.v-parallax__content
+  padding: 0 !important
+
 a
-  color: var(--v-darker-base) !important
   text-decoration: none
 
+#app
+  background-color: #fafafa !important
+
+.upper-content
+  top: -200px
+  position: relative
+  margin-bottom: -200px
+
+.round
+  border-radius: 20px !important
+
+.bordered
+  border: 1px solid #e0e0e0
