style: apply a "lecture" style with adapted fonts for reading

--- a/src/bop-components/components/BCard/BCard.styl
+++ b/src/bop-components/components/BCard/BCard.styl
@@ -2,6 +2,8 @@
   background-color: white !important
   border-radius: 20px !important
   box-shadow: 0.25rem 0.25rem 1.25rem rgba(146,125,250,.1) !important
+  &.b-card--tile
+    border-radius: 0 !important
   &.v-card--link:before
     border-radius: 20px
   h1
