style: adapt articles list and article view to mobile devices (responsive)

--- a/src/css/elements.styl
+++ b/src/css/elements.styl
@@ -8,16 +8,11 @@
 a
   text-decoration: none
 
-#app
-  background-color: #fafafa !important
-
 .upper-content
   top: -200px
   position: relative
   margin-bottom: -200px
 
-.round
-  border-radius: 20px !important
-
-.bordered
-  border: 1px solid #e0e0e0
+.v-chip
+  margin-bottom: 4px
+  margin-right: 4px
