--- a/src/css/colors.styl
+++ b/src/css/colors.styl
@@ -1,6 +1,14 @@
 .gradient
-  background: linear-gradient(90deg, var(--v-dark-base) 0%, var(--v-light-base) 100%)
+  background: linear-gradient(90deg, var(--v-dark-base) 0%, var(--v-light-base) 100%) !important
 .semi-transparent
   background-color: rgba(60,0,0,.1) !important
+.darker-bg
+  background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5))
+
 .shadow
-  text-shadow: 0 0 9px #555
+  text-shadow: 0 0 9px #555 !important
+
+ul.v-pagination li:first-child button
+ul.v-pagination li:last-child button
+  box-shadow: none !important
+  background-color: var(--v-background-base) !important
