style: integrate custom colors for dark and white themes
Introduced personalized colors for dark and light theme - that match iOS theme, it's a personal choice ;)

--- a/src/css/theme.styl
+++ b/src/css/theme.styl
@@ -12,5 +12,15 @@
   }
 }
 
-.darker-bg
-  background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5))
+.v-application
+.v-list
+.background
+  background: var(--v-background-base) !important
+.v-sheet
+.v-navigation-drawer
+  background: var(--v-sheets-base) !important
+
+.round
+  border-radius: 20px !important
+.bordered
+  border: 1px solid #e0e0e0
