idk: revert sheets color change, SASS variable change needed

--- a/src/css/theme.styl
+++ b/src/css/theme.styl
@@ -18,7 +18,7 @@
   background: var(--v-background-base) !important
 .v-sheet
 .v-navigation-drawer
-  background: var(--v-sheets-base) !important
+  background: var(--v-sheets-base)
 
 .round
   border-radius: 20px !important
