feat: add theming system (auto/light/dark)

--- a/src/css/theme.styl
+++ b/src/css/theme.styl
@@ -1,3 +1,6 @@
+:root
+  color-scheme: light dark
+
 @css {
   .translucent, .blurred {
     background-color: rgba(var(--v-background-base), 0.4) !important;
