--- a/src/css/fonts.styl
+++ b/src/css/fonts.styl
@@ -1,6 +1,6 @@
 .lecture-title
   font-family: 'Lora', serif
-  color: black
+  color: var(--v-text-base)
 
 .lecture-text
 .markdown-body p
@@ -13,3 +13,8 @@
   code
     color: inherit
     box-shadow: none
+  ol
+    color: var(--v-text-base)
+  pre
+    background: var(--v-background-base) !important
+    color: var(--v-text-base)
