--- a/src/css/theme.styl
+++ b/src/css/theme.styl
@@ -19,9 +19,9 @@
 .v-list
 .background
   background: var(--v-background-base) !important
-.v-sheet
+.v-sheet:not(.translucent, .blurred, .gradient)
 .v-navigation-drawer
-  background: var(--v-sheets-base)
+  background: var(--v-sheets-base) !important
 
 .round
   border-radius: 20px !important
