style: add spacing across the app

--- a/src/bop-components/components/BCard/BCard.styl
+++ b/src/bop-components/components/BCard/BCard.styl
@@ -8,13 +8,13 @@
     border-radius: 0 !important
   &.v-card--link:before
     border-radius: 20px
-  h1
-    color: #e33733
+  h1, h2, h3, h4, h5, h6
+    color: var(--v-darker-base)
     display: block
     line-height: 32px
-    margin-bottom: 8px
     font-size: 24px
     font-weight: 300
+    margin-bottom: 8px
   p
     margin: 0
     color: var(--v-text-base)
