--- a/src/css/elements.styl
+++ b/src/css/elements.styl
@@ -14,5 +14,6 @@ a
   margin-bottom: -200px
 
 .v-chip
-  margin-bottom: 4px
-  margin-right: 4px
+.social-icon
+  margin-bottom: 8px
+  margin-right: 8px
