style: add css rule for sheet color and adjust BTopBanner style

--- a/src/css/elements.styl
+++ b/src/css/elements.styl
@@ -17,3 +17,10 @@ a
 .social-icon
   margin-bottom: 8px
   margin-right: 8px
+
+.centered-container
+.b-top-banner .v-parallax__content
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: center
