--- a/src/css/theme.styl
+++ b/src/css/theme.styl
@@ -18,8 +18,8 @@
 .v-application
 .background
   background: var(--v-background-base) !important
-.v-sheet:not(.translucent, .blurred, .gradient)
-.v-list
+
+.sheet
 .v-navigation-drawer
   background: var(--v-sheets-base) !important
 
