--- a/src/css/colors.styl
+++ b/src/css/colors.styl
@@ -3,7 +3,9 @@
 .semi-transparent
   background-color: rgba(60,0,0,.1) !important
 .darker-bg
-  background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5))
+  background: rgba(0, 0, 0, .25)
+  -webkit-backdrop-filter: blur(15px);
+  backdrop-filter: blur(15px);
 
 .shadow
   text-shadow: 0 0 9px #555 !important
