wip: change articles list layout
Changed the layout to make it feel more attractive and less boring. *very clear commit message yeah, don't thank me*

--- a/src/bop-components/components/BCard/BCard.styl
+++ b/src/bop-components/components/BCard/BCard.styl
@@ -21,7 +21,7 @@
   .v-card__actions button
     font-weight: normal !important
     color: var(--v-darker-base) !important
-  .v-responsive__content
+  &:not(.v-image) .v-responsive__content
     padding-left: 16px
     display: flex
     align-items: flex-end
