--- a/src/css/colors.styl
+++ b/src/css/colors.styl
@@ -4,8 +4,8 @@
   background-color: rgba(60,0,0,.1) !important
 .darker-bg
   background: rgba(0, 0, 0, .25)
-  -webkit-backdrop-filter: blur(15px);
-  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px)
+  backdrop-filter: blur(15px)
 
 .shadow
   text-shadow: 0 0 9px #555 !important
