Npm updates + UI fixes
Fix for big screen sizes + text style

--- a/src/css/fonts.styl
+++ b/src/css/fonts.styl
@@ -5,6 +5,13 @@
   &.display-3
     line-height: 4rem !important
 
+.lecture-title-bloc
+  font-family: 'Lora', serif
+  color: var(--v-text-base)
+  line-height: 1.9rem !important
+  &.display-3
+    line-height: 3.7rem !important
+
 .markdown-body
   h1, h2, h3, h4, h5, h6
     @extend .lecture-title
