--- a/src/bop-components/components/BCard/BCard.styl
+++ b/src/bop-components/components/BCard/BCard.styl
@@ -14,7 +14,10 @@
     line-height: 32px
     font-size: 24px
     font-weight: 300
-    margin-bottom: 8px
+    margin-bottom: 4px
+  .vcardtitle
+    color: var(--v-darker-base)
+    margin-bottom: 3px
   p
     margin: 0
     color: var(--v-text-base)
