Fix: styles, feat: markdown

--- a/src/css/fonts.styl
+++ b/src/css/fonts.styl
@@ -20,8 +20,10 @@
     font-family: 'Merriweather', serif
     font-size: 15px !important
   code
-    color: inherit
+    color: #2a2b2d
     box-shadow: none
+    display: block
+    font-weight: normal
   ol, ul
     color: var(--v-text-base)
   pre
