--- a/assets/fonts.css
+++ b/assets/fonts.css
@@ -1,113 +1,92 @@
-.theme--light .nuxt-content blockquote {
-  color: #555555;
-  padding-left: 0.6rem;
-  border-left: 3px solid #E33734;
+.theme--dark .nuxt-content blockquote, .theme--light .nuxt-content blockquote {
+  padding-left: .6rem;
+  border-left: 3px solid #e33734;
   line-height: 1.6;
-  position: relative;
-  background: #fafafa;
+  position: relative
+}
+
+.theme--light .nuxt-content blockquote {
+  color: #555;
+  background: #fafafa
 }
 
 .theme--dark .nuxt-content blockquote {
-  padding-left: 0.6rem;
-  border-left: 3px solid #E33734;
-  line-height: 1.6;
-  position: relative;
-  background: #292323;
+  background: #292323
 }
 
 .theme--dark .token.operator {
-  background: none;
+  background: 0 0
 }
 
 .nuxt-content hr {
   margin-bottom: 14px;
-  border-color: rgba(0, 0, 0, 0.12);
-  border-width: thin 0 0 0;
+  border-color: rgba(0, 0, 0, .12);
+  border-width: thin 0 0
 }
 
 .nuxt-content img {
   max-width: min(100%, 400px);
-  height: auto;
+  height: auto
 }
 
-.lecture-title,
-.nuxt-content h1,
-.nuxt-content h2,
-.nuxt-content h3,
-.nuxt-content h4,
-.nuxt-content h5,
-.nuxt-content h6 {
+.lecture-title, .nuxt-content h1, .nuxt-content h2, .nuxt-content h3, .nuxt-content h4, .nuxt-content h5, .nuxt-content h6 {
   color: var(--v-text-base);
   padding-top: 5px;
-  line-height: 2.5rem !important;
+  line-height: 2.5rem !important
 }
 
-.lecture-title.display-3,
-.nuxt-content h1.display-3,
-.nuxt-content h2.display-3,
-.nuxt-content h3.display-3,
-.nuxt-content h4.display-3,
-.nuxt-content h5.display-3,
-.nuxt-content h6.display-3 {
-  line-height: 4rem !important;
+.lecture-title.display-3, .nuxt-content h1.display-3, .nuxt-content h2.display-3, .nuxt-content h3.display-3, .nuxt-content h4.display-3, .nuxt-content h5.display-3, .nuxt-content h6.display-3 {
+  line-height: 4rem !important
 }
 
 .lecture-title-bloc {
-  font-family: 'Lora', serif;
+  font-family: "Lora", serif;
   color: var(--v-text-base);
-  line-height: 1.9rem !important;
+  line-height: 1.9rem !important
 }
 
 .lecture-title-bloc.display-3 {
-  line-height: 3.7rem !important;
+  line-height: 3.7rem !important
 }
 
-.nuxt-content p,
-.nuxt-content ul,
-.nuxt-content ol,
-.nuxt-content li,
-.lecture-text {
-  font-size: 15px !important;
+.lecture-text, .nuxt-content li, .nuxt-content ol, .nuxt-content p, .nuxt-content ul {
+  font-size: 15px !important
 }
 
 .nuxt-content ul {
   padding-top: 10px;
-  padding-bottom: 10px;
+  padding-bottom: 10px
 }
 
-.nuxt-content p,
-.lecture-text {
-  text-align: justify;
+.lecture-text, .nuxt-content p {
+  text-align: justify
 }
 
 .nuxt-content a {
-  color: var(--v-anchor-base) !important;
+  color: var(--v-anchor-base) !important
 }
 
 .nuxt-content code {
   color: #2a2b2d;
-  box-shadow: none!important;
-  text-shadow: none!important;
+  box-shadow: none !important;
+  text-shadow: none !important;
   display: block;
-  font-weight: normal;
-  background-color: transparent!important;
+  font-weight: 400;
+  background-color: transparent !important
 }
 
 .nuxt-content li + li {
-  margin-top: 0.75rem;
+  margin-top: .75rem
 }
 
-.nuxt-content ol,
-.nuxt-content ul,
-.nuxt-content li {
-  color: var(--v-text-base);
+.nuxt-content li, .nuxt-content ol, .nuxt-content pre, .nuxt-content ul {
+  color: var(--v-text-base)
 }
 
 .nuxt-content pre {
-  background: var(--v-background-base) !important;
-  color: var(--v-text-base);
+  background: var(--v-background-base) !important
 }
 
 .lecture-text {
-  line-height: 1.5rem !important;
+  line-height: 1.5rem !important
 }
